# arel

./: .gitignore  Cargo.toml  Debug.md  README.md
.github/workflows/: rust.yml
arel/: Cargo.toml  Debug.md
arel/src/: lib.rs  prelude.rs  traits.rs
arel/src/collectors/: mod.rs  row.rs  sql.rs
arel/src/methods/: mod.rs
arel/src/nodes/: mod.rs  source.rs  sql_literal.rs
arel/src/statements/: group.rs  insert.rs  join.rs  limit.rs  lock.rs  mod.rs  offset.rs  order.rs  select.rs  update.rs  where.rs
arel/src/statements/helpers/: and.rs  mod.rs
arel/src/table/: mod.rs
arel/src/table/delete_manager/: delete_statement.rs  mod.rs
arel/src/table/insert_manager/: insert_statement.rs
arel/src/table/select_manager/select_statement/: mod.rs
arel/src/table/select_manager/select_statement/select_core/: join_source.rs  mod.rs
arel/src/table/update_manager/: update_statement.rs
arel/src/visitors/: db_state.rs  db_transaction.rs  mod.rs  to_sql.rs
arel/tests/: delete.rs  insert.rs  query.rs  tests.rs  update.rs
arel/tests/visitors/: sqlite.rs
arel/tests/visitors/sqlite_sqlx/: mod.rs  sqlite_sqlx_association.rs
arel_cli/: Cargo.toml  README.md
arel_cli/src/: main.rs
arel_cli/src/generators/: mod.rs
arel_macro/: Cargo.toml
arel_macro/src/: lib.rs
arel_macro/src/arel/: mod.rs
arel_macro/src/arel/generators/: fields_generator.rs  functions_generator.rs  mod.rs
arel_macro/src/arel/generators/associations_generator/: belongs_to_generator.rs  has_and_belongs_to_many_generator.rs  has_many_generator.rs  has_one_generator.rs  mod.rs
arel_macro/src/arel/generators/fields_generator/: mod.rs
arel_macro/src/arel/generators/functions_generator/: accessor.rs  mod.rs  validator.rs
arel_macro/src/arel/model_struct/: mod.rs  persisted_record_struct.rs
example_sqlite/: Cargo.toml
example_sqlite/src/: main.rs
src/: lib.rs  traits.rs
src/collectors/: mod.rs  sql_string.rs
src/methods/: mod.rs
src/nodes/: and.rs  mod.rs  source.rs  sql_literal.rs
src/nodes/select_statement/: mod.rs
src/nodes/select_statement/select_core/: join_source.rs  mod.rs
src/nodes/statements/: mod.rs  where.rs
src/statements/: group.rs  having.rs  insert.rs  join.rs  limit.rs  lock.rs  mod.rs  offset.rs  order.rs  select.rs  update.rs  where.rs
src/statements/helpers/: and.rs  mod.rs
src/table/: mod.rs
src/table/delete_manager/: delete_statement.rs  mod.rs
src/table/delete_manager/delete_statement/: mod.rs
src/table/insert_manager/: insert_statement.rs  mod.rs
src/table/select_manager/: mod.rs
src/table/select_manager/select_statement/: mod.rs
src/table/select_manager/select_statement/select_core/: join_source.rs  mod.rs
src/table/select_statement/: mod.rs
src/table/select_statement/select_core/: join_source.rs  mod.rs
src/table/update_manager/: mod.rs  update_statement.rs
src/visitors/: mod.rs  mysql.rs
tests/: delete.rs  insert.rs  query.rs  update.rs
