[package]
name = "arel"
version = "0.0.6"
edition = "2021"
description = "arel: a sql orm"
license = "MIT OR Apache-2.0"
#include = ["src/**/*.rs", "README.md"]
repository = "https://github.com/cargo-crates/arel"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "^0.11.4"
serde_json = "1.0.64"
regex = "1.5.4"
anyhow = "1.0"

#arel_macro = { path = "arel_macro" }
arel_macro = "0.0.0"