[package]
name = "arel"
version = "0.0.9"
edition = "2021"
description = "arel: a sql orm"
license = "MIT OR Apache-2.0"
#include = ["src/**/*.rs", "README.md"]
readme = "https://github.com/cargo-crates/arel/blob/main/README.md"
repository = "https://github.com/cargo-crates/arel"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mssql = ["sqlx/mssql"]

[dependencies]
Inflector = "^0.11.4"
serde_json = "1.0.64"
regex = "1.5.4"
anyhow = "1.0"

once_cell = "1.8.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "any" ] }
async-trait = "0.1.51"
#Date and Time for Rust
chrono = "0.4"
tokio = { version = "1.1", features = ["full"], optional = true }

arel_macro = { path = "../arel_macro" }
#arel_macro = "0.0.4"

[dev-dependencies]
tokio-test = "0.4.2"