[package]
name = "arel"
version = "0.1.1"
edition = "2021"
description = "a sql orm base sqlx"
license = "MIT OR Apache-2.0"
authors = ["sanmu <578595193@qq.com>"]
#include = ["src/**/*.rs", "README.md"]
readme = "../README.md"
repository = "https://github.com/cargo-crates/arel"
categories = ["database"]
keywords = ["sqlx", "orm", "mysql", "postgres", "sqlite"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [
    "runtime-tokio-native-tls",
]
mysql = ["sqlx/mysql", "sqlx/any"]
sqlite = ["sqlx/sqlite", "sqlx/any"]
postgres = ["sqlx/postgres", "sqlx/any"]
mssql = ["sqlx/mssql", "sqlx/any"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]

[package.metadata.docs.rs]
features = ["sqlite"]

[dependencies]
Inflector = "^0.11.4"
serde = "1.0"
serde_json = "1.0"
regex = "1.5"
anyhow = "1.0"

once_cell = "1.8"
sqlx = { version = "^0.5", features = ["chrono"] }
async-trait = "0.1"
#Date and Time for Rust
chrono = { version = "0.4", features = ["serde"] }
#tokio = { version = "1.1", features = ["full"], optional = true }

arel_macro = { path = "../arel_macro" }
#arel_macro = "0.0.9"

[dev-dependencies]
tokio-test = "0.4.2"