[package]
name = "arel_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
barrel = "0.7"

Inflector = "^0.11.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5.4"