[package]
name = "example_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

tokio = { version = "1.1", features = ["full"] }
#arel = { path = "../arel", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
arel = { path = "../arel", features = ["sqlite"] }